# rs_shortlink

./: Cargo.toml  README.md
fixtures/: server.conf
src/: config.rs  err.rs  main.rs  repo.rs
src/domain/: mod.rs  short_link.rs
src/routes/: create_link.rs  health_check.rs  mod.rs  serve_slink.rs
