[package]
name = "mylink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
axum = "0.6"
rand = "0.8.5"
sqlx = {version="0.6.1", features=["mysql", "macros", "runtime-tokio-rustls", "chrono", "json", "migrate"]}
thiserror = "1.0.34"
tokio = {version="1", features=["full"]}
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = {version="1.0.130", features=["derive"]}
serde_json = "1"
dotenv = "0.15.0"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
toml = "0.7"
bloomfilter = {version="1", features=["serde"]}
byteorder = "1.4"
glob = "0.3"

